[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chengyu-CLI"
version = "0.1.1"
description = "A CLI tool to learn Chinese idioms with translations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]

[project.scripts]
chengyu = "chengyu.main:main"

[tool.hatch.build.targets.wheel]
include = [
    "chengyu/",
]